# OECD-Pillar-Two-Tech-Valuation

./: .gitignore  DATA_SCHEMA.md  README.md  pyproject.toml  requirements.txt
analysis/r/: 00_environment.R  01_validate_data.R  02_validate_did.R  02b_bacon_decomposition.R  02c_cs_did.R  02d_sa_did.R  02e_honest_did.R  03_validate_event_study.R  04_validate_scm_sdid.R  04b_gsynth.R  05_validate_heterogeneity.R  06_compare_python_results.R  07_validate_exposure_design.R  run_all.R
config/: project.yaml
data/: raw_balance_sheets.csv  raw_corporate_financials.csv  raw_market_dimensions.csv  verified_100_constituents.csv
data/derived_results/: AAPL_synthetic_trajectory.csv  AAPL_synthetic_trajectory_indexed.csv  full_cohort_scm_trajectories.csv  (+1 more)
doc/: DATA_SCHEMA.md  SAMPLE_SELECTION_METHODOLOGY.md
docs/: ARCHITECTURE.md
platform/: .gitignore  README.md  requirements.txt
scripts/: __init__.py
src/: fetch_data.py  validate_sample.py
tests/: test_boundaries.py  test_cleaning.py  test_cli_pipeline_contract.py  test_design_remediation.py  test_event_confound_screen.py  test_exposure_design.py  test_jurisdiction_policy_timing.py  test_latest_only_boundaries.py  test_medallion_architecture.py  test_no_false_staggered_claims.py  test_publication_contract.py  test_r_validation_outputs.py  test_rag_chunker.py  test_rag_corpus.py  test_rag_evidence_tracer.py  test_rag_indexer.py  test_rag_retriever.py  test_remediation_figures.py  test_report_hallucination.py  test_report_retrieval_orchestration.py  test_scoreboard_applicability_contract.py  test_table_contracts.py
(+166 files in other folders)
