[project]
name = "oecd-pillar-two"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.2",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "yfinance>=0.2.40",
  "yahooquery>=2.3.7",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
rag = [
  "PyMuPDF>=1.24",
  "google-genai>=0.1",
  "sentence-transformers==2.7.0",
  "transformers==4.41.2",
  "torch==2.2.2; platform_system == 'Darwin' and platform_machine == 'x86_64'",
]
dev = ["pytest>=8.0"]

[project.scripts]
pillar-two = "oecd_pillar_two.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
